# charla-api-quod-extract-data

./: .codebasenotes-annotations.json  .gitignore  Inference_with_Table_Transformer_(TATR)_for_parsing_tables.ipynb  main.py  parsing_libs_tests.ipynb  pdf_table_extractor.py  pdf_to_image.py  pyproject.toml  sandbox.py  table_detection.py  transformers_test.py
agents/: generic_openai_agent.py
data/: ground_truth.xlsx
pdf_parsing/: pdf_parser.py
prompts/: prompts.toml
src/utils/: image_overlap.py
structured_output/: output_classes.py
