[project]
name = "charla-api-quod-extract-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.16.0",
    "logfire>=3.2.0",
    "pdfplumber>=0.11.5",
    "pydantic-ai[logfire]>=0.0.19",
    "pymupdf>=1.25.2",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-dotenv[cli]>=1.0.1",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ipykernel>=6.29.5",
]
