[project]
name = "charla-api-quod-extract-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytesseract>=0.3.13",
    "pdfplumber>=0.10.3",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.37.2",
    "matplotlib>=3.10.0",
    "numpy>=1.26.0",
    "timm==1.0.15",
    "pymupdf>=1.25.3",
    "easyocr>=1.7.2",
    "pandas>=2.2.3",
]


[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
